# eurorack-dsp

./: CMakeLists.txt  README.md  prj.conf  west.yml
boards/: teensy41.overlay
src/: analog_in.c  analog_in.h  audio.c  audio.h  biquad.c  biquad.h  dsp.c  dsp.h  leds.c  leds.h  main.c  utils.h
